# flight-route-advisor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  design-proposal.html  pyproject.toml  start.sh
backend/: requirements.txt  start.sh
backend/app/: config.py  envelope.py  main.py  middleware.py
backend/batch/: build_flow.py  build_odhr.py  build_odr2.py  build_suas.py
data-ingestion-backend/: _MIRROR.md  requirements.txt  start.sh
data-ingestion-backend/alembic/: env.py
data-ingestion-backend/app/: config.py  main.py  middleware.py
data-ingestion-backend/docker/: Dockerfile
data-ingestion-backend/docs/: DB스키마.md  README.md  기술스택_결정.md  스킬연동_레퍼런스.md  작업계획서.md  체크리스트.md
data-ingestion-backend/scripts/: ingest_jepp_nav.py  migrate_static_reference_to_db.py  migrate_suas_to_db.py
docker/: Dockerfile  docker-compose.yml
docs/: 00-plan.md  01-architecture.md  02-db-integration.md  03-backend-api.md  04-frontend-migration.md  05-mvp-scope.md  06-conventions.md  07-checklist.md  08-setup-and-dev-order.md  09-review-notes.md  10-ui-and-realtime.md  11-ai-route-reasoning-proposal.md  12-operational-goal-and-scenarios.md  13-ai-reasoning-dev-plan.md  14-improvement-request.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: adapters.js  analyze-sectors.js  api.js  config.js  flow-management-panel.js  (+22 more)
result/: README.md  backend-integration-review-2026-07-22.md  phase8-baseline-verification-2026-07-21.md  review-2026-07-22.md
tests/: __init__.py  test_advisor.py  test_cli.py  test_graph.py  test_models.py
(+73 files in other folders)
