[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-route-advisor"
version = "0.1.0"
description = "Find the best flight routes between airports"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
flight-route-advisor = "flight_route_advisor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
